// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`social-media/upload-from-url/facebook single video Publish the Post video gets published 1`] = `
Ok {
  "value": Object {
    "postId": "1042961149725000",
    "url": "/175657278317538/videos/1042961149725000",
  },
}
`;

exports[`social-media/upload-from-url/facebook single video RegisterUpload should return an id 1`] = `
Ok {
  "value": Object {
    "uploadId": "1042961149725000",
  },
}
`;
